syntax = "proto3";
package githubWatcher;

service WatchRepoService {
  rpc WatchRepo (WatchRepoRequest) returns (WatchRepoResponse) {}
}

message WatchRepoRequest {
  string repository = 1;
  string branch = 2;
  string SHA = 3;
}

message WatchRepoResponse {
  bool isUpdated = 1;
}
